Haciendo validaciones de un formulario

--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Validar Contraseña</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/6d642dc6ea.js" crossorigin="anonymous"></script>
+    <title>Validar correro</title>
 </head>
 <body>
-    <div class="container_ingreso">
-        <input type="text" name="Contraseña" id="id_contraseña" placeholder="Ingrese su contraseña">
-        <input type="button" value="Entrar" class="boton">
-    </div>
-    <div class="back ocultar">
-        <div class="container_respuesta">
-            <i class="fa-regular"></i>
-            <!-- 
-                <i class="fa-regular fa-circle-check"></i>
-                <i class="fa-regular fa-circle-xmark"></i>
-            -->
-        </div>
-    </div>
+    <header class="header">
+        <h1 class="title">Iniciar Sesión</h1>
+    </header>
+    <section class="cuerpo_form">
+        <form action="" class="formulario">
+            <input type="text" name="nombre" id="" class="input name" placeholder="Nombre">
+            <input type="email" name="correo" id="" class="input email" placeholder="Correo Electrónico">
+            <input type="password" name="contrasenia" id="" class="input contrasenia" placeholder="Contraseña">
+            <input type="submit" value="Entrar" class="button">
+        </form>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
