--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <input type="email" name="correo" id="" class="input email" placeholder="Correo Electrónico">
             <input type="password" name="contrasenia" id="" class="input contrasenia" placeholder="Contraseña">
             <input type="submit" value="Entrar" class="button">
+            <label for="" class="text_error ocultar_text_error"></label>
         </form>
     </section>
     <script src="script.js"></script>
